--- a/src/App.scss
+++ b/src/App.scss
@@ -2,4 +2,27 @@
   .header {
     background: #ededed;
   }
+
+  button {
+    border: 3px solid #31393f;
+    padding: 1rem;
+    font-family: "Montserrat";
+    font-weight: 800;
+    background: #31393f;
+    border-radius: 7px;
+    color: white;
+    letter-spacing: 3px;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    &:disabled {
+      background: #31393f7a;
+      border-color: #31393f7a;
+      color: #ffffff73;
+      cursor: not-allowed;
+    }
+    &:hover {
+      transform: scale(1.1);
+      transition: all 0.2s ease-in-out;
+    }
+  }
 }
