--- a/src/components/TileComponent/TileComponent.scss
+++ b/src/components/TileComponent/TileComponent.scss
@@ -7,7 +7,7 @@
   border-radius: 7px;
   background: white;
   margin: 1.5rem 1rem;
-  box-shadow: 0 0 11px #d3d3d3;
+  box-shadow: 0 0 30px #e3e3e3;
 
   .counts {
     font-size: 2rem;
