--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #31393f;
-  background: #ececec;
+  background: #f5f5f5;
 }
 
 code {
