--- a/src/components/DescriptionAndStatusComponent/DescriptionAndStatusComponent.scss
+++ b/src/components/DescriptionAndStatusComponent/DescriptionAndStatusComponent.scss
@@ -2,9 +2,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* box-shadow: 0 0 11px #d3d3d3; */
   background: white;
   margin: 1.5rem 1rem;
   border-radius: 7px;
   padding: 0 30rem;
+
+  @media screen and (max-width: 1500px) {
+    padding: 0 1rem;
+  }
 }
